--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "firebase": "^10.5.2",
+    "highcharts-angular": "^4.0.0",
     "jwt-decode": "^4.0.0",
     "moment": "^2.29.4",
     "rxjs": "~7.8.0",
